Forgotten file from last commit.

--- a/compare_methods/config.ini
+++ b/compare_methods/config.ini
@@ -9,13 +9,16 @@ path: ../../../../../../../ai2/scholar/prediction/src/main/resources/org/allenai
 baseFeature: paperCitationCount
 citationFeature: paperCitationCount
 averageFeature: paperMeanCitationsPerYear
+ageFeature: paperAge
 
 [AuthorCitation]
 baseFeature: authorCitationCount
 citationFeature: authorCitationCount
 averageFeature: authorMeanCitationsPerYear
+ageFeature: authorAge
 
 [AuthorHindex]
 baseFeature: authorHInds
 citationFeature: authorCitationCount
 averageFeature: authorHIndDelta
+ageFeature: authorAge
