Changing the constant model to actually be constant, and the simple linear model to be more simple.

--- a/compare_methods/config.ini
+++ b/compare_methods/config.ini
@@ -9,16 +9,19 @@ path: ../../../../../../../scholar/prediction/src/main/resources/org/allenai/pre
 baseFeature: paperCitationCount
 citationFeature: paperCitationCount
 averageFeature: paperMeanCitationsPerYear
+deltaFeature: paper.citationDeltaIn.1995
 ageFeature: paperAge
 
 [AuthorCitation]
 baseFeature: authorCitationCount
 citationFeature: authorCitationCount
 averageFeature: authorMeanCitationsPerYear
+deltaFeature: author.citationDeltaIn.1995
 ageFeature: authorAge
 
 [AuthorHindex]
 baseFeature: authorHInds
 citationFeature: authorCitationCount
 averageFeature: authorHIndDelta
+deltaFeature: authorHIndDelta
 ageFeature: authorAge
